fdo#53604 fix RTF export of empty footnotes

Regression from d4069372484f18b242a42a1996767f57b031fff6